[gd_scene load_steps=11 format=2]

[ext_resource path="res://gfx/robot.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://fonts/montreal/Montreal.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=4]
[ext_resource path="res://music/electricshock.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.6333
height = 10.2283

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( -80, 0, 0 )
initial_velocity = 49.18
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.490196, 0.486275, 0.486275, 1 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 21.39
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.956863, 1, 0, 1 )

[node name="player" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 4
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "right"
anims/left = SubResource( 1 )
anims/right = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control"]
anchor_left = -3.15
anchor_top = -1.819
anchor_right = -3.15
anchor_bottom = -1.819
margin_left = -504.5
margin_top = -300.0
margin_right = -400.5
margin_bottom = -279.0
custom_fonts/font = ExtResource( 3 )
text = "enemies left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/Control"]
anchor_left = -3.15
anchor_top = -1.819
anchor_right = -3.15
anchor_bottom = -1.819
margin_left = -306.5
margin_top = -300.0
margin_right = -184.5
margin_bottom = -262.0
custom_fonts/font = ExtResource( 3 )
text = "0/4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelUp" type="Label" parent="CanvasLayer/Control"]
anchor_left = -3.15
anchor_top = -1.819
anchor_right = -3.15
anchor_bottom = -1.819
margin_left = -12.7972
margin_top = -86.3924
margin_right = 14.2028
margin_bottom = -48.3924
custom_fonts/font = ExtResource( 3 )
text = "w"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDown" type="Label" parent="CanvasLayer/Control"]
visible = false
anchor_left = -3.15
anchor_top = -1.819
anchor_right = -3.15
anchor_bottom = -1.819
margin_left = 11.5434
margin_top = 17.2042
margin_right = 21.5434
margin_bottom = 25.2042
custom_fonts/font = ExtResource( 4 )
text = "s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLeft" type="Label" parent="CanvasLayer/Control"]
anchor_left = -3.15
anchor_top = -1.819
anchor_right = -3.15
anchor_bottom = -1.819
margin_left = -55.0797
margin_top = 17.2042
margin_right = -45.0797
margin_bottom = 38.2042
custom_fonts/font = ExtResource( 3 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelRight" type="Label" parent="CanvasLayer/Control"]
anchor_left = -3.15
anchor_top = -1.819
anchor_right = -3.15
anchor_bottom = -1.819
margin_left = 38.6967
margin_top = 17.2042
margin_right = 49.6967
margin_bottom = 38.2042
custom_fonts/font = ExtResource( 3 )
text = "d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.471937 )
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 12 )
rotation = -1.57079
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
explosiveness = 0.83
process_material = SubResource( 4 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 0, -5.56218 )
rotation = -2.45649
emitting = false
amount = 50
one_shot = true
explosiveness = 0.8
process_material = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
